--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,7 @@
 .gradient{
     background-image: linear-gradient(93deg,#53b2fe,#065af3);
 }
+.backdrop-filter{
+   -webkit-backdrop-filter:blur(50px);
+   backdrop-filter:blur(50px);
+}
